
* V1.22.8 - 
- BASIC: Fix REM behaviour of DEF line.
- BASIC: Implemented SYS() function, somewhat in line with BBCSDL's version.
  In Matrix Brandy, this calls OS_SWINumberFromString, and also works under
  RISC OS.
- System: Implement two SYS calls for obtaining the address of a system call
  (Brandy_dlgetaddr) and to call it (Brandy_dlcalladdr).

* V1.22.7 - 01 August 2020
- Platforms: Native display builds for RISC OS available, including
  networking. 26-bit and 32-bit builds both possible.
- Platforms: SYS calls on RISC OS can call the Brandy_* calls from within
  the interpreter in addition to the RISC OS native calls.
  OS_SWINumberFromString is intercepted to also recognise the Brandy_* calls.
- Platforms: BrandyApp build mechanism changed, no longer relies on ld to
  build a .o file, instead uses a BASIC program to build a .c file with the
  program data embedded.
- System: pthreads used for timer thread on non-SDL (and non-RISC OS) builds.
- System: Timer uses monotomic clock instead of gettimeofday().
- System: *EXEC now interruptable with ESCAPE, and not aborted on other
  errors.
- BASIC: Unsigned 8-bit data type (var&) implemented.
- BASIC: Overflowing a 32-bit integer variable will now raise an error
  instead of silently wrapping. (uint8 variables will wrap.)
- BASIC: OLD keyword now reports Unsupported. It never worked properly and
  in Brandy it is rather pointless.
- BASIC: DELETE keyword now requires at least one parameter.
- BASIC: Lowercase immediate mode commands no longer allowed, unless compiled
  with -DBRANDY_ALLOW_LOWERCASE_COMMANDS
- BASIC: RENUMBER edge cases fixed.
- BASIC: GET(x,y) and GET$(x,y) are now relative to the current text viewport
  as set with VDU28.
- Examples: Teletext screen editor updated with mouse support, inspired by
  code written as examples for Pixelblip@Stardot's editor.

* V1.22.6 - 19 June 2020
- BASIC: Implemented BB4W/BBCSDL extension GET(x,y) and GET$(x,y)